레슨 페이지 로직및 조회 쿼리 개선중